# Point-Cloud-Normal-Estimation

./: .gitignore  README.md  main.py  pyproject.toml
report/: report.md
results/csv/: ablation_density.csv  ablation_depth.csv  normals.csv  recon.csv  report_ang_err_oriented.csv  report_ang_err_oriented.md  report_ang_err_unsigned.csv  report_ang_err_unsigned.md  report_chamfer_l1.csv  report_chamfer_l1.md  report_normal_consistency.csv  report_normal_consistency.md  report_oriented_acc.csv  report_oriented_acc.md  summary_by_noise.csv  table_normals_ang_err.csv  table_normals_ang_err.md  table_normals_oriented_acc.csv  table_normals_oriented_acc.md  table_recon_chamfer.csv  table_recon_chamfer.md
scripts/: ablation.py  benchmark.py  check_alignment.py  download_data.py  eval_normals.py  eval_recon.py  make_figs.py  poisson_recon.py  prepare_data.py  run_normals.py
src/ours/: wnnc_torch.py
